--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.1.1</version>
+        </dependency>
     </dependencies>
 </project>
